--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Lora:wght@400&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="image/logo.png">
 </head>
 <body>
 
@@ -123,4 +124,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
