--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container about-content">
             <div class="about-text">
                 <h3>My Commitment: Precision Meets Professionalism</h3>
-                <p>I am a **Cum Laude** graduate with a Bachelor of Science in <b>Computer Science</b> from Mariano Marcos State University. This academic foundation means I approach every task with an <b>analytical, detail-oriented mindset.</b></p>
+                <p>I am a Cum Laude graduate with a Bachelor of Science in <b>Computer Science</b> from Mariano Marcos State University. This academic foundation means I approach every task with an <b>analytical, detail-oriented mindset.</b></p>
                 <p>My internship experience at Ilocos Norte Electric Cooperative (INEC) allowed me to perfectly balance <b>IT system support</b> (troubleshooting, web updates) with <b>critical administrative duties</b>.</p>
                 <p class="highlight-text"><b>The takeaway?</b> You hire a VA who not only handles the workload but understands the <b>technical integrity</b> required to manage your most sensitive data.</p>
             </div>
@@ -126,3 +126,4 @@
 </body>
 
 </html>
+
