--- a/index.html
+++ b/index.html
@@ -94,12 +94,11 @@
             <h3>Ready to Boost Your Productivity?</h3>
             <p class="cta-subtitle">Let's schedule a call to discuss how my technical and administrative expertise can streamline your operations.</p>
             <div class="contact-grid">
-                <form action="YOUR_FORM_SUBMISSION_URL" method="POST" class="contact-form">
+                <form action="https://formspree.io/f/{form_id}" method="POST" class="contact-form">
                     <input type="text" name="name" placeholder="Your Name" required>
                     <input type="email" name="email" placeholder="Your Email" required>
                     <textarea name="message" rows="5" placeholder="Tell me about your project and data needs..." required></textarea>
                     <button type="submit" class="btn send-btn">Send Message <i class="fas fa-paper-plane"></i></button>
-                    <p class="form-note">*(Note: Replace "YOUR_FORM_SUBMISSION_URL" with a service like Formspree or Netlify Forms.)</p>
                 </form>
 
                 <div class="direct-contact">
@@ -126,5 +125,6 @@
 </body>
 
 </html>
+
 
 
