--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="home" class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <p class="greeting">Hi, I'm Aubrey Jade.</p>
+                <p class="greeting">Hi, I'm Aubrey de Guzman.</p>
                 <h2>Your Organized <b>Data Management VA.</b></h2>
                 <p class="tagline">I blend <b>technical precision</b> (B.S. Computer Science) with dedicated administrative support to ensure your business data is reliable, accurate, and ready for growth.</p>
                 <a href="#contact" class="btn">Let's Connect & Get Organized <i class="fas fa-arrow-right"></i></a>
@@ -125,6 +125,7 @@
 </body>
 
 </html>
+
 
 
 
